Fixed text overflow

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -99,7 +99,6 @@ canvas {
     padding-left: 0;
     li {
       height: 25px;
-      text-warp: nowrap;
       a {
         opacity: 0.5;
         color: white;
@@ -111,6 +110,7 @@ canvas {
         padding: 0;
         padding-left: 20px;
         line-height: 25px;
+        white-space: nowrap;
         &:hover {
           text-decoration:none;
           opacity: 1;
